Modernize/fix CI

--- a/.github/workflows/api-docs.yml
+++ b/.github/workflows/api-docs.yml
@@ -11,4 +11,4 @@ jobs:
      with:
        package_name: redis
        modules: Redis
-       pathsToInvalidate: /redis
+       pathsToInvalidate: /redis/*
